--- a/src/main/java/br/com/oath/sandbox/Oauth2Client.config
+++ b/src/main/java/br/com/oath/sandbox/Oauth2Client.config
@@ -2,7 +2,7 @@
 scope=https://www.googleapis.com/auth/gmail.readonly
 grant_type=password
 username=ualter.junior
-password=ilmlamfedu@2005
+password=************
 client_id=899377700198-8kmnvan1dm4hi88af7kn4j7ttv0t4gr1.apps.googleusercontent.com
 client_secret=8uQdgb0qXqBJuwTBm5b1AsgE
 #access_token=
