--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>br.com.oath</groupId>
-	<artifactId>oath-sanbox</artifactId>
+	<groupId>br.com.oauth</groupId>
+	<artifactId>oauth-sanbox</artifactId>
 	<version>1.0</version>
 	<packaging>jar</packaging>
 
-	<name>oath-sanbox</name>
+	<name>oauth-sanbox</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
