--- a/server-ualter-oauth-sandbox/package.json
+++ b/server-ualter-oauth-sandbox/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
       "express": "3.x",
-      "promise": "8.x"
+      "promise": "8.x",
+      "pug": "2.0.0-rc.4"
   }
 }
